{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 404,
  "lineage": "d6c51fed-a284-6abb-936c-ea5efda4810b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "reverse_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ac43988dfd31ab9a",
            "arn": "arn:aws:ec2:eu-west-1:843853427720:instance/i-0704c5d9cbc41d368",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0704c5d9cbc41d368",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "reverse_proxy_keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3cfcf650f402332",
            "private_dns": "ip-10-0-0-67.eu-west-1.compute.internal",
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-52-31-14-76.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.31.14.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f280066f634c7678",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e1373b551552d60",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08bceb30a1ef898d8"
            ]
          },
          "dependencies": [
            "aws_key_pair.reverse_proxy_keypair",
            "aws_security_group.public_proxy",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:internet-gateway/igw-069934b2e7517916d",
            "id": "igw-069934b2e7517916d",
            "owner_id": "843853427720",
            "tags": {
              "Name": "b3t-dev-igw",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-igw",
              "environment": "dev",
              "namespace": "b3t"
            },
            "vpc_id": "vpc-044a9749474454d31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:route-table/rtb-0f710020a82873eaa",
            "id": "rtb-0f710020a82873eaa",
            "owner_id": "843853427720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069934b2e7517916d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-044a9749474454d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2d31cc7453fd728",
            "route_table_id": "rtb-0f710020a82873eaa",
            "subnet_id": "subnet-07e1373b551552d60"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_internet_gateway.gateway"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c84a6adc5b68bdf4",
            "route_table_id": "rtb-0f710020a82873eaa",
            "subnet_id": "subnet-0146eba8d0cea35ac"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_internet_gateway.gateway",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_docdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:security-group/sg-0fe3e3549bf8eeac1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe3e3549bf8eeac1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "b3t-dev-private-docdb",
            "name_prefix": "",
            "owner_id": "843853427720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "b3t-dev-private-docdb",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-private-docdb",
              "environment": "dev",
              "namespace": "b3t"
            },
            "timeouts": null,
            "vpc_id": "vpc-044a9749474454d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:security-group/sg-08bceb30a1ef898d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bceb30a1ef898d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "b3t-dev-proxy",
            "name_prefix": "",
            "owner_id": "843853427720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "b3t-dev-public-proxy",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-public-proxy",
              "environment": "dev",
              "namespace": "b3t"
            },
            "timeouts": null,
            "vpc_id": "vpc-044a9749474454d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:security-group/sg-063e75a2d38c65a25",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063e75a2d38c65a25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "b3t-dev-public-web",
            "name_prefix": "",
            "owner_id": "843853427720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "b3t-dev-public-web",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-public-web",
              "environment": "dev",
              "namespace": "b3t"
            },
            "timeouts": null,
            "vpc_id": "vpc-044a9749474454d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:subnet/subnet-07e1373b551552d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07e1373b551552d60",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843853427720",
            "tags": {
              "Name": "b3t-dev-public-subnet-0",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-public-subnet-0",
              "environment": "dev",
              "namespace": "b3t"
            },
            "vpc_id": "vpc-044a9749474454d31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:subnet/subnet-0146eba8d0cea35ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0146eba8d0cea35ac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843853427720",
            "tags": {
              "Name": "b3t-dev-public-subnet-1",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-public-subnet-1",
              "environment": "dev",
              "namespace": "b3t"
            },
            "vpc_id": "vpc-044a9749474454d31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:vpc/vpc-044a9749474454d31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b730109c3725a8d6",
            "default_route_table_id": "rtb-00568c64c4cd04d36",
            "default_security_group_id": "sg-08f50556bf0511a5a",
            "dhcp_options_id": "dopt-7895831a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-044a9749474454d31",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00568c64c4cd04d36",
            "owner_id": "843853427720",
            "tags": {
              "Name": "b3t-vpc",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-vpc",
              "environment": "dev",
              "namespace": "b3t"
            }
          }
        }
      ]
    },
    {
      "module": "module.private_subnet_0",
      "mode": "managed",
      "type": "aws_eip",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a048671a51519380",
            "domain": "vpc",
            "id": "eipalloc-0865a48e4b8d2d2f5",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0175ec9f1b2c46b43",
            "private_dns": "ip-10-0-0-29.eu-west-1.compute.internal",
            "private_ip": "10.0.0.29",
            "public_dns": "ec2-63-33-111-198.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.111.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.private_subnet_0",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0865a48e4b8d2d2f5",
            "connectivity_type": "public",
            "id": "nat-08b97d562e01de31f",
            "network_interface_id": "eni-0175ec9f1b2c46b43",
            "private_ip": "10.0.0.29",
            "public_ip": "63.33.111.198",
            "subnet_id": "subnet-07e1373b551552d60",
            "tags": {
              "Name": "b3t-dev-gw",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-gw",
              "environment": "dev",
              "namespace": "b3t"
            }
          },
          "dependencies": [
            "aws_vpc.main",
            "module.private_subnet_0.aws_eip.private",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_0",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c5107123b3eed1921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08b97d562e01de31f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c5107123b3eed192",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnet_0.aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "module.private_subnet_0.aws_eip.private",
            "module.private_subnet_0.aws_nat_gateway.gateway"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_0",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:route-table/rtb-0c5107123b3eed192",
            "id": "rtb-0c5107123b3eed192",
            "owner_id": "843853427720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08b97d562e01de31f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-044a9749474454d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_0",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d27cb2ac18cc5978",
            "route_table_id": "rtb-0c5107123b3eed192",
            "subnet_id": "subnet-0853ce7dee1733804"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.private_subnet_0.aws_route_table.private",
            "module.private_subnet_0.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_0",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:subnet/subnet-0853ce7dee1733804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0853ce7dee1733804",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843853427720",
            "tags": {
              "Name": "b3t-dev-private-subnet-0",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-private-subnet-0",
              "environment": "dev",
              "namespace": "b3t"
            },
            "vpc_id": "vpc-044a9749474454d31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a9896445220fbb6a",
            "domain": "vpc",
            "id": "eipalloc-00573ab1f7a841146",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-08a2f9868d8f5fa16",
            "private_dns": "ip-10-0-1-131.eu-west-1.compute.internal",
            "private_ip": "10.0.1.131",
            "public_dns": "ec2-54-228-104-206.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.104.206",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00573ab1f7a841146",
            "connectivity_type": "public",
            "id": "nat-04d4972e838822378",
            "network_interface_id": "eni-08a2f9868d8f5fa16",
            "private_ip": "10.0.1.131",
            "public_ip": "54.228.104.206",
            "subnet_id": "subnet-0146eba8d0cea35ac",
            "tags": {
              "Name": "b3t-dev-gw",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-gw",
              "environment": "dev",
              "namespace": "b3t"
            }
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "module.private_subnet_1.aws_eip.private"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01b5f71400df3f2121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04d4972e838822378",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b5f71400df3f212",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnet_1.aws_eip.private",
            "module.private_subnet_1.aws_nat_gateway.gateway",
            "module.private_subnet_1.aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:route-table/rtb-01b5f71400df3f212",
            "id": "rtb-01b5f71400df3f212",
            "owner_id": "843853427720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d4972e838822378",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-044a9749474454d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087ecc0b38358f410",
            "route_table_id": "rtb-01b5f71400df3f212",
            "subnet_id": "subnet-0c115e1270cd41328"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.private_subnet_1.aws_route_table.private",
            "module.private_subnet_1.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:843853427720:subnet/subnet-0c115e1270cd41328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0c115e1270cd41328",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843853427720",
            "tags": {
              "Name": "b3t-dev-private-subnet-1",
              "environment": "dev",
              "namespace": "b3t"
            },
            "tags_all": {
              "Name": "b3t-dev-private-subnet-1",
              "environment": "dev",
              "namespace": "b3t"
            },
            "vpc_id": "vpc-044a9749474454d31"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}